add pet images to img folder and add classes to the list elements
Co-authored-by: Riley Shimp <rilryshimp@gmail.com>

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <h1>Get to meet our pets!</h1>
   <h2>Peanut</h2>
   <img src="img/peanut.jpg" alt="Peanut">
-  <ul>
+  <ul class="peanut">
     <li>He is a good boy</li>
     <li>Brown-white Australian Shephard</li>
     <li>He loves treats</li>
   </ul>
   <h2>Buffy and Spike</h2>
   <img src="img/kitties.jpg" alt="Kitties">
-  <ul>
+  <ul class="kitties">
     <li>BFF</li>
     <li>Sweetest kitties ever</li>
     <li>Orange and Brown</li>
