place pet info in different divs
Co-authored-by: Riley Shimp <rilryshimp@gmail.com>

--- a/index.html
+++ b/index.html
@@ -6,18 +6,22 @@
 </head>
 <body>
   <h1>Get to meet our pets!</h1>
-  <h2>Peanut</h2>
-  <img src="img/peanut.jpg" alt="Peanut">
-  <ul class="peanut">
-    <li>He is a good boy</li>
-    <li>Brown-white Australian Shephard</li>
-    <li>He loves treats</li>
-  </ul>
-  <h2>Buffy and Spike</h2>
-  <img src="img/kitties.jpg" alt="Kitties">
-  <ul class="kitties">
-    <li>BFF</li>
-    <li>Sweetest kitties ever</li>
-    <li>Orange and Brown</li>
-  </ul>
+  <div>
+    <h2>Peanut</h2>
+    <img src="img/peanut.jpg" alt="Peanut">
+    <ul class="peanut">
+      <li>He is a good boy</li>
+      <li>Brown-white Australian Shephard</li>
+      <li>He loves treats</li>
+    </ul>
+  </div>
+  <div>
+    <h2>Buffy and Spike</h2>
+    <img src="img/kitties.jpg" alt="Kitties">
+    <ul class="kitties">
+      <li>BFF</li>
+      <li>Sweetest kitties ever</li>
+      <li>Orange and Brown</li>
+    </ul>
+  </div>
 </html>
