change layout of pet info to inline
Co-authored-by: Riley Shimp <rilryshimp@gmail.com>

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <li>He loves treats</li>
     </ul>
   </div>
-  <div>
+  <div class="right">
     <h2>Buffy and Spike</h2>
     <img src="img/kitties.jpg" alt="Kitties">
     <ul class="kitties">
