--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <li>Brown-white Australian Shephard</li>
       <li>He loves treats</li>
     </ul>
+    <p>Lorem, ipsum dolor sit amet <span class="red">consectetur</span> adipisicing elit. Totam minima dolor ducimus velit consequuntur natus cum, rerum magni sed sequi quo libero tempore odio, suscipit porro quaerat facere, voluptatibus dolorum?</p>
   </div>
   <div class="right">
     <h2>Buffy and Spike</h2>
