change the divs from being inline to float left with the help of classes
Co-authored-by: Riley Shimp <rilryshimp@gmail.com>

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>Get to meet our pets!</h1>
-  <div>
+  <div class="column">
     <h2>Peanut</h2>
     <img src="img/peanut.jpg" alt="Peanut">
     <ul class="peanut">
@@ -16,7 +16,7 @@
     </ul>
     <p>Lorem, ipsum dolor sit amet <span class="red">consectetur</span> adipisicing elit. Totam minima dolor ducimus velit consequuntur natus cum, rerum magni sed sequi quo libero tempore odio, suscipit porro quaerat facere, voluptatibus dolorum?</p>
   </div>
-  <div class="right">
+  <div class="column">
     <h2>Buffy and Spike</h2>
     <img src="img/kitties.jpg" alt="Kitties">
     <ul class="kitties">
