add floated image into paragraph
Co-authored-by: Riley Shimp <rilryshimp@gmail.com>

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <li>Brown-white Australian Shephard</li>
       <li>He loves treats</li>
     </ul>
-    <p>Lorem, ipsum dolor sit amet <span class="red">consectetur</span> adipisicing elit. Totam minima dolor ducimus velit consequuntur natus cum, rerum magni sed sequi quo libero tempore odio, suscipit porro quaerat facere, voluptatibus dolorum?</p>
+    <p>Lorem, ipsum dolor sit amet <span class="red">consectetur</span> adipisicing elit. Totam minima dolor ducimus velit consequuntur natus cum, rerum magni sed sequi quo <img src="img/peanut.jpg" alt="Peanut" class="intext">libero tempore odio, suscipit porro quaerat facere, voluptatibus dolorum?</p>
   </div>
   <div class="column">
     <h2>Buffy and Spike</h2>
