--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 </head>
 <body>
   <h1>Get to meet our pets!</h1>
+  <ul>
+    <li>Favorite Food</li>
+    <li>Favorite Places</li>
+    <li>Favorite Toys</li>
+    <li>Picture Gallery</li>
+  </ul>
   <div class="column">
     <h2>Peanut</h2>
     <img src="img/peanut.jpg" alt="Peanut">
