--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>Get to meet our pets!</h1>
-  <ul>
+  <ul class="sidebar">
     <li>Favorite Food</li>
     <li>Favorite Places</li>
     <li>Favorite Toys</li>
